Remove deprecated Zeek support and update documentation; adjust setup scripts and environment configurations accordingly

--- a/agent.env
+++ b/agent.env
@@ -4,7 +4,7 @@
 AGENT_ID=agent1
 AGENT_IP=192.168.1.10
 AGENT_REST_PORT=5001
-ZEEK_LOG_PATH=/var/log/zeek/current/
+# ZEEK_LOG_PATH=/var/log/zeek/current/
 SURICATA_LOG_PATH=/var/log/suricata/eve.json
 API_KEY=changeme
 LOG_DIR=../logs
