--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ uvicorn==0.24.0
 requests==2.31.0
 websockets==12.0
 pyyaml==6.0.1
-python-multipart==0.0.6 
+python-multipart==0.0.6
+# pyzeek  # Zeek Python bindings deprecated
