final removal of config yaml, shared secret key and lastly removal of ws

--- a/agent.env
+++ b/agent.env
@@ -6,6 +6,6 @@ AGENT_IP=192.168.1.10
 AGENT_REST_PORT=5001
 # ZEEK_LOG_PATH=/var/log/zeek/current/
 SURICATA_LOG_PATH=/var/log/suricata/eve.json
-API_KEY=changeme
+API_KEY=firewall_demo_key_2025
 LOG_DIR=../logs
 # You can add CONTROLLER_URL, CONTROLLER_IP, CONTROLLER_ALERT_PORT if needed for agent/controller communication
