--- a/central_engine/config.yaml
+++ b/central_engine/config.yaml
@@ -1,9 +1,13 @@
-agents:
-  - id: agent1
-    ip: "192.168.1.10"
-    port: 5050
-    ws_port: 9000
-    zeek_log_path: "/var/log/zeek/current/"
-    suricata_log_path: "/var/log/suricata/eve.json"
-api_key: "changeme"
-log_dir: "../logs"
+# DEPRECATED: This YAML was previously used for configuration. Runtime now
+# loads configuration from environment variables / .env files via
+# `utils.helpers.load_env_config()`.
+#
+# Example (for reference only):
+# agents:
+#   - id: agent1
+#     ip: "192.168.1.10"
+#     port: 5050
+#     zeek_log_path: "/var/log/zeek/current/"
+#     suricata_log_path: "/var/log/suricata/eve.json"
+# api_key: "changeme"
+# log_dir: "../logs"
