--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 requests==2.31.0
-websockets==12.0
-pyyaml==6.0.1
 python-multipart==0.0.6
-# pyzeek  # Zeek Python bindings deprecated
+python-dotenv==1.0.1
+
+# Optional / deprecated:
+# pyyaml (removed) -- YAML config parsing is deprecated in runtime
+# websockets (removed) -- WebSocket support removed; system uses REST only
+# pyzeek  # Zeek Python bindings deprecated (left commented)
